force-app/main/default/objects/Case/fields/IRDAI_Token_Number__c.field-meta.xml
<CustomField>
    <fullName>IRDAI_Token_Number__c</fullName>
    <description>This field is used in ABSLI Complaint Creation Flow from RegisterComplaintIGMSToCRM Inbound call
This field is used in ABSLI Complaint Creation Flow from UpdateComplaintIGMSToCRM Inbound call</description>
    <label>IRDAI Token Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>