force-app/main/default/objects/Case/fields/Is_Approval_Pending__c.field-meta.xml
<CustomField>
    <fullName>Is_Approval_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approval Pending</label>
    <type>Checkbox</type>
</CustomField>