force-app/main/default/objects/Case/fields/Is_Bulk_Updatable__c.field-meta.xml
<CustomField>
    <fullName>Is_Bulk_Updatable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bulk Updatable</label>
    <type>Checkbox</type>
</CustomField>