force-app/main/default/objects/Case/fields/Is_FTP__c.field-meta.xml
<CustomField>
    <fullName>Is_FTP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is FTP</label>
    <type>Checkbox</type>
</CustomField>