force-app/main/default/objects/Case/fields/is_Manual_Approval__c.field-meta.xml
<CustomField>
    <fullName>is_Manual_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Manual Approval</label>
    <type>Checkbox</type>
</CustomField>