force-app/main/default/objects/Case/fields/Is_Manual_Moved__c.field-meta.xml
<CustomField>
    <fullName>Is_Manual_Moved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manual Moved</label>
    <type>Checkbox</type>
</CustomField>