force-app/main/default/objects/Case/fields/Is_Manual_Stage_Visited__c.field-meta.xml
<CustomField>
    <fullName>Is_Manual_Stage_Visited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manual Stage Visited</label>
    <type>Checkbox</type>
</CustomField>