force-app/main/default/objects/Case/fields/Is_Next_Stage_Manual__c.field-meta.xml
<CustomField>
    <fullName>Is_Next_Stage_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Next Stage Manual</label>
    <type>Checkbox</type>
</CustomField>