force-app/main/default/objects/Case/fields/Is_Priority_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_Priority_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Priority Customer</label>
    <type>Checkbox</type>
</CustomField>