force-app/main/default/objects/Case/fields/Is_Recategorise_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_Recategorise_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recategorize Allowed</label>
    <type>Checkbox</type>
</CustomField>