force-app/main/default/objects/Case/fields/Is_Reopen_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_Reopen_Allowed__c</fullName>
    <description>Determines if Reopened is allowed on the Case</description>
    <formula>AND(IsClosed, !ISNULL(Reopen_Days__c), Reopen_Days__c !=0, TODAY() &lt; DATEVALUE(ClosedDate) + Reopen_Days__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Reopen Allowed</label>
    <type>Checkbox</type>
</CustomField>