force-app/main/default/objects/Case/fields/Is_STP__c.field-meta.xml
<CustomField>
    <fullName>Is_STP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is STP?</label>
    <type>Checkbox</type>
</CustomField>