force-app/main/default/objects/Case/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <description>ABSLI Sub SubType</description>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accrued Bonus Additions Value Related</fullName>
            </value>
            <value>
                <fullName>HOLD Refund- Maturity/ Termination</fullName>
            </value>
            <value>
                <fullName>Leakage Salvage</fullName>
            </value>
            <value>
                <fullName>Leakage Winback</fullName>
            </value>
            <value>
                <fullName>Address/Contact/Email ID Related</fullName>
            </value>
            <value>
                <fullName>Assignment Related</fullName>
            </value>
            <value>
                <fullName>Maturity Related</fullName>
            </value>
            <value>
                <fullName>Medical Center Not Available</fullName>
            </value>
            <value>
                <fullName>Medical Center Service Feedback</fullName>
            </value>
            <value>
                <fullName>Name Change/Correction Related</fullName>
            </value>
            <value>
                <fullName>DOB change procedure</fullName>
            </value>
            <value>
                <fullName>Duplicate Policy Document Related</fullName>
            </value>
            <value>
                <fullName>EIA Account Related</fullName>
            </value>
            <value>
                <fullName>Freelook Information</fullName>
            </value>
            <value>
                <fullName>Overseas Medical test Payment to customer</fullName>
            </value>
            <value>
                <fullName>Loan Related</fullName>
            </value>
            <value>
                <fullName>Name Change Related</fullName>
            </value>
            <value>
                <fullName>Nomination Related</fullName>
            </value>
            <value>
                <fullName>post call- complain</fullName>
            </value>
            <value>
                <fullName>Premium paid certificate / Policy Statement from Chatbot</fullName>
            </value>
            <value>
                <fullName>Product related</fullName>
            </value>
            <value>
                <fullName>Refund Cheque RTGS Related</fullName>
            </value>
            <value>
                <fullName>Tele FMR Medical Report Tagging Status</fullName>
            </value>
            <value>
                <fullName>TDS Related</fullName>
            </value>
            <value>
                <fullName>Withdrawal/Survival Benefit Related</fullName>
            </value>
            <value>
                <fullName>Discontinued Payout Related</fullName>
            </value>
            <value>
                <fullName>DOB change related</fullName>
            </value>
            <value>
                <fullName>Top Up Related</fullName>
            </value>
            <value>
                <fullName>Benefits related</fullName>
            </value>
            <value>
                <fullName>Documentation related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>