force-app/main/default/objects/Case/fields/LAN__c.field-meta.xml
<CustomField>
    <fullName>LAN__c</fullName>
    <label>LAN #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>