force-app/main/default/objects/Case/fields/Last_Owner_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Owner_Change_Date__c</fullName>
    <label>Last Owner Change Date</label>
    <type>DateTime</type>
</CustomField>