force-app/main/default/objects/Case/fields/Latest_Notes__c.field-meta.xml
<CustomField>
    <fullName>Latest_Notes__c</fullName>
    <label>Latest Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>