force-app/main/default/objects/Case/fields/Line_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business__c</fullName>
    <description>This picklist field will contain the lob value to be used in sharing rules</description>
    <label>Line Of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIF</fullName>
            </value>
            <value>
                <fullName>MF</fullName>
            </value>
            <value>
                <fullName>PMS</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>