force-app/main/default/objects/Case/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <description>This field will get LOB value from related Asset or Account.</description>
    <formula>IF( ISBLANK( AssetId ) || ISBlank(TEXT(Asset.LOB__c )) , Text( Account.Line_of_Business__c ),  TEXT(Asset.LOB__c ))</formula>
    <label>LOB</label>
    <type>Text</type>
</CustomField>