force-app/main/default/objects/Case/fields/Mapped_Email__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Email__c</fullName>
    <formula>Account.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mapped_Email</label>
    <type>Text</type>
</CustomField>