force-app/main/default/objects/Case/fields/Masked_LAN__c.field-meta.xml
<CustomField>
    <fullName>Masked_LAN__c</fullName>
    <formula>IF(
    LEN( Asset.LAN__c ) &gt;= 4,
    &quot;******&quot; &amp; 
    RIGHT(Asset.LAN__c, 4),
    Asset.LAN__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Masked LAN #</label>
    <type>Text</type>
</CustomField>