force-app/main/default/objects/Case/fields/Merged_into_SR__c.field-meta.xml
<CustomField>
    <fullName>Merged_into_SR__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; MasterRecord.Id, MasterRecord.CaseNumber, &apos;_self&apos;)</formula>
    <label>Merged into SR</label>
    <type>Text</type>
</CustomField>