force-app/main/default/objects/Case/fields/moved_back__c.field-meta.xml
<CustomField>
    <fullName>moved_back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moved Back</label>
    <type>Checkbox</type>
</CustomField>