force-app/main/default/objects/Case/fields/MoveToNext__c.field-meta.xml
<CustomField>
    <fullName>MoveToNext__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MoveToNext</label>
    <type>Checkbox</type>
</CustomField>