force-app/main/default/objects/Case/fields/Multiple_Child_Details__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Child_Details__c</fullName>
    <label>Multiple Child Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>