force-app/main/default/objects/Case/fields/Name_on_channel__c.field-meta.xml
<CustomField>
    <fullName>Name_on_channel__c</fullName>
    <label>Name on channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>