force-app/main/default/objects/Case/fields/New_Stage_email_sent__c.field-meta.xml
<CustomField>
    <fullName>New_Stage_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Stage email sent</label>
    <type>Checkbox</type>
</CustomField>