force-app/main/default/objects/Case/fields/Notes_from_Sprinklr__c.field-meta.xml
<CustomField>
    <fullName>Notes_from_Sprinklr__c</fullName>
    <label>Notes from Sprinklr</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>