force-app/main/default/objects/Case/fields/oldCCCIdFields__c.field-meta.xml
<CustomField>
    <fullName>oldCCCIdFields__c</fullName>
    <label>oldCCCIdFields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>