force-app/main/default/objects/Case/fields/OnCreateCloseSR__c.field-meta.xml
<CustomField>
    <fullName>OnCreateCloseSR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is coming from API, any channel creating case from API just for tracking purpose, going to send this field value as true, post, record creation, SR status is marked to Closed with Stage as Resolved.</description>
    <label>OnCreateCloseSR</label>
    <type>Checkbox</type>
</CustomField>