force-app/main/default/objects/Case/fields/Overall_Case_Closure_SLA__c.field-meta.xml
<CustomField>
    <fullName>Overall_Case_Closure_SLA__c</fullName>
    <label>Overall Case Closure SLA</label>
    <type>DateTime</type>
</CustomField>