force-app/main/default/objects/Case/fields/Overall_SLA_Date__c.field-meta.xml
<CustomField>
    <fullName>Overall_SLA_Date__c</fullName>
    <description>Date formula for Overall SLA field</description>
    <formula>TEXT(DAY(Datevalue(Overall_Case_Closure_SLA__c))) + &apos;/&apos; + TEXT(MONTH(Datevalue(Overall_Case_Closure_SLA__c))) + &apos;/&apos; + TEXT(YEAR(Datevalue(Overall_Case_Closure_SLA__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall SLA Date</label>
    <type>Text</type>
</CustomField>