force-app/main/default/objects/Case/fields/Overall_SLA_plus_X_days__c.field-meta.xml
<CustomField>
    <fullName>Overall_SLA_plus_X_days__c</fullName>
    <label>Overall SLA plus X days</label>
    <type>DateTime</type>
</CustomField>