force-app/main/default/objects/Case/fields/Overdue_Case_Closure_SLA_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Case_Closure_SLA_In_Days__c</fullName>
    <description>Overdue Case Closure SLA (In Days)</description>
    <formula>IF(
    OR(ISPICKVAL(Status, &quot;Resolved&quot;), ISPICKVAL(Status, &quot;Unresolved&quot;), ISPICKVAL(Status, &quot;Closed Duplicate&quot;)),
    0,
    IF(TODAY() &gt; DATEVALUE(Overall_Case_Closure_SLA__c),(TODAY() - DATEVALUE(Overall_Case_Closure_SLA__c)),0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Case Closure SLA (In Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>