force-app/main/default/objects/Case/fields/Owner_Zone__c.field-meta.xml
<CustomField>
    <fullName>Owner_Zone__c</fullName>
    <formula>Owner:User.Zone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Zone</label>
    <type>Text</type>
</CustomField>