force-app/main/default/objects/Case/fields/OwnerId_Text__c.field-meta.xml
<CustomField>
    <fullName>OwnerId_Text__c</fullName>
    <formula>IF(ISBLANK(OwnerId),&apos;&apos;,OwnerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerId Text</label>
    <type>Text</type>
</CustomField>