force-app/main/default/objects/Case/fields/OwnerTeam__c.field-meta.xml
<CustomField>
    <fullName>OwnerTeam__c</fullName>
    <formula>IF(ISBLANK(Owner:User.Id),Owner:Queue.QueueName,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerTeam</label>
    <type>Text</type>
</CustomField>