force-app/main/default/objects/Case/fields/OwnerText__c.field-meta.xml
<CustomField>
    <fullName>OwnerText__c</fullName>
    <description>Populate owner of case (queue/user)</description>
    <formula>IF(ISBLANK(Owner:User.Id),Owner:Queue.QueueName,Owner:User.FirstName+&apos; &apos;+Owner:User.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerText</label>
    <type>Text</type>
</CustomField>