force-app/main/default/objects/Case/fields/OwnerUser__c.field-meta.xml
<CustomField>
    <fullName>OwnerUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>