force-app/main/default/objects/Case/fields/Pending_Clarification__c.field-meta.xml
<CustomField>
    <fullName>Pending_Clarification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Clarification</label>
    <type>Checkbox</type>
</CustomField>