force-app/main/default/objects/Case/fields/PlatformEventInitiatedBy__c.field-meta.xml
<CustomField>
    <fullName>PlatformEventInitiatedBy__c</fullName>
    <label>PlatformEventInitiatedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>