force-app/main/default/objects/Case/fields/Pre_framework_SLA__c.field-meta.xml
<CustomField>
    <fullName>Pre_framework_SLA__c</fullName>
    <label>Pre framework SLA</label>
    <type>DateTime</type>
</CustomField>