force-app/main/default/objects/Case/fields/Preframework_to_Framework_FromUI__c.field-meta.xml
<CustomField>
    <fullName>Preframework_to_Framework_FromUI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is user to Track if the Case is Converted from PreFramwork to Framework from UI.</description>
    <label>Preframework to Framework FromUI</label>
    <type>Checkbox</type>
</CustomField>