force-app/main/default/objects/Case/fields/ProductText__c.field-meta.xml
<CustomField>
    <fullName>ProductText__c</fullName>
    <description>Used in Wellness to stamp correct product.</description>
    <label>Product_Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>