force-app/main/default/objects/Case/fields/Proposal_Number__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Number__c</fullName>
    <formula>Asset.SerialNumber</formula>
    <label>Proposal Number</label>
    <type>Text</type>
</CustomField>