force-app/main/default/objects/Case/fields/Prospect_Payload__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Payload__c</fullName>
    <label>Prospect Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>