force-app/main/default/objects/Case/fields/Recat_Approval__c.field-meta.xml
<CustomField>
    <fullName>Recat_Approval__c</fullName>
    <label>Recat Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
                <default>true</default>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>System Issue</fullName>
            </value>
            <value>
                <fullName>Procedural Delay</fullName>
            </value>
            <value>
                <fullName>External Delay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>