force-app/main/default/objects/Case/fields/Recategorisation_Date__c.field-meta.xml
<CustomField>
    <fullName>Recategorisation_Date__c</fullName>
    <label>Recategorization Date</label>
    <type>DateTime</type>
</CustomField>