force-app/main/default/objects/Case/fields/Recategorisation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recategorisation_Reason__c</fullName>
    <label>Recategorisation Reason</label>
    <type>TextArea</type>
</CustomField>