force-app/main/default/objects/Case/fields/Reject_Case__c.field-meta.xml
<CustomField>
    <fullName>Reject_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is to be marked when Case need to marked Rejected, also change the Checklist and Task as rejected.</description>
    <label>Reject Case</label>
    <type>Checkbox</type>
</CustomField>