force-app/main/default/objects/Case/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>Case Unresolved Details</label>
    <type>TextArea</type>
</CustomField>