force-app/main/default/objects/Case/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Case Unresolved Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invalid information</fullName>
            </value>
            <value>
                <fullName>Closed as Exception</fullName>
            </value>
            <value>
                <fullName>Insufficient/incomplete details from customer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pending Customer Confirmation/documentation</fullName>
            </value>
            <value>
                <fullName>Out-of-Scope Request</fullName>
            </value>
            <value>
                <fullName>Customer Non Contactable</fullName>
            </value>
            <value>
                <fullName>Partially Resolved</fullName>
            </value>
            <value>
                <fullName>Complaint Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>