force-app/main/default/objects/Case/fields/Rejection_Reason_w_o_Type__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason_w_o_Type__c</fullName>
    <formula>TRIM(RIGHT(TEXT(Rejection_Reason__c), LEN(TEXT(Rejection_Reason__c)) - FIND(&quot;: &quot;, TEXT(Rejection_Reason__c)) - 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejection Reason w/o Type</label>
    <type>Text</type>
</CustomField>