force-app/main/default/objects/Case/fields/Renewal_Request__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for tracking the renewal for which this case was reported. This is automatically tagged based on the policy if a renewal user creates the case</description>
    <label>Renewal Request</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>