force-app/main/default/objects/Case/fields/Reopen_Days__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Days__c</fullName>
    <description>Number of Days till the case can be reopened after closure.</description>
    <label>Reopen Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>