force-app/main/default/objects/Case/fields/Reopen_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Reason__c</fullName>
    <label>Reopen Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>