force-app/main/default/objects/Case/fields/Reopen_SLA_Broken__c.field-meta.xml
<CustomField>
    <fullName>Reopen_SLA_Broken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reopen SLA Broken</label>
    <type>Checkbox</type>
</CustomField>