force-app/main/default/objects/Case/fields/Reopen_SLA_Broken_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Reopen_SLA_Broken_Date_Time__c</fullName>
    <label>Reopen SLA Broken Date Time</label>
    <type>DateTime</type>
</CustomField>