force-app/main/default/objects/Case/fields/Reopen_Style__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Style__c</fullName>
    <label>Reopen Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reopen Stage With Movement</fullName>
            </value>
            <value>
                <fullName>Reopen Stage No Movement</fullName>
            </value>
            <value>
                <fullName>Move To First Stage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>