force-app/main/default/objects/Case/fields/Reopened__c.field-meta.xml
<CustomField>
    <fullName>Reopened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reopened</label>
    <type>Checkbox</type>
</CustomField>