force-app/main/default/objects/Case/fields/Reopened_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Reopened_DateTime__c</fullName>
    <label>Reopened DateTime</label>
    <type>DateTime</type>
</CustomField>