force-app/main/default/objects/Case/fields/Requested_Recat_Json__c.field-meta.xml
<CustomField>
    <fullName>Requested_Recat_Json__c</fullName>
    <label>Requested Recat Json</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>