force-app/main/default/objects/Case/fields/Resolution_By_Date_Value__c.field-meta.xml
<CustomField>
    <fullName>Resolution_By_Date_Value__c</fullName>
    <formula>IF( TEXT(Business_Unit__c) = &quot;ABSLI&quot;, DATEVALUE( Overall_Case_Closure_SLA__c ), DATEVALUE(Overall_Case_Closure_SLA__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolution By Date Value</label>
    <type>Date</type>
</CustomField>