force-app/main/default/objects/Case/fields/ResolutionReason__c.field-meta.xml
<CustomField>
    <fullName>ResolutionReason__c</fullName>
    <label>Resolution Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Problem Solved</fullName>
            </value>
            <value>
                <fullName>Information Provided</fullName>
            </value>
            <value>
                <fullName>Closed as Junk</fullName>
            </value>
            <value>
                <fullName>Closed as Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>