force-app/main/default/objects/Case/fields/Sent_to_EBOT__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_EBOT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to EBOT</label>
    <type>Checkbox</type>
</CustomField>