force-app/main/default/objects/Case/fields/Sentiments__c.field-meta.xml
<CustomField>
    <fullName>Sentiments__c</fullName>
    <label>Sentiments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>