force-app/main/default/objects/Case/fields/Short_URL__c.field-meta.xml
<CustomField>
    <fullName>Short_URL__c</fullName>
    <label>Short URL</label>
    <type>Url</type>
</CustomField>