force-app/main/default/objects/Case/fields/Signature_Validation__c.field-meta.xml
<CustomField>
    <fullName>Signature_Validation__c</fullName>
    <formula>HYPERLINK(&quot;http://10.157.2.62/NewInsignia_Talisma/showSignImageActionNew.do?secureUserId=talisma&amp;securePassword=pass@123&amp;policyNumber=&quot; &amp; Asset.Name &amp;&quot;&amp;interactionId=123456&amp;LoggedInUserID=Anand&amp;UserType=BRANCH&quot;, &quot;Validation Url&quot; ,&quot;_self&quot;)</formula>
    <label>Signature Validation</label>
    <type>Text</type>
</CustomField>