force-app/main/default/objects/Case/fields/Skip_Dedupe__c.field-meta.xml
<CustomField>
    <fullName>Skip_Dedupe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Dedupe</label>
    <type>Checkbox</type>
</CustomField>