force-app/main/default/objects/Case/fields/SLA_Broken__c.field-meta.xml
<CustomField>
    <fullName>SLA_Broken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA Broken</label>
    <type>Checkbox</type>
</CustomField>