force-app/main/default/objects/Case/fields/SLA_Broken_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SLA_Broken_DateTime__c</fullName>
    <label>SLA Broken DateTime</label>
    <type>DateTime</type>
</CustomField>