force-app/main/default/objects/Case/fields/SLA_Override_Identifier__c.field-meta.xml
<CustomField>
    <fullName>SLA_Override_Identifier__c</fullName>
    <label>SLA Override Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>