force-app/main/default/objects/Case/fields/SLA_Target_1__c.field-meta.xml
<CustomField>
    <fullName>SLA_Target_1__c</fullName>
    <label>SLA Target 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>