force-app/main/default/objects/Case/fields/SLA_Target_2__c.field-meta.xml
<CustomField>
    <fullName>SLA_Target_2__c</fullName>
    <label>SLA Target 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>