force-app/main/default/objects/Case/fields/SLA_Target_3__c.field-meta.xml
<CustomField>
    <fullName>SLA_Target_3__c</fullName>
    <label>SLA Target 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>