force-app/main/default/objects/Case/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anywhere Service</fullName>
            </value>
            <value>
                <fullName>Advisor Portal</fullName>
            </value>
            <value>
                <fullName>Bulk Upload from HO</fullName>
            </value>
            <value>
                <fullName>CAMS FO</fullName>
            </value>
            <value>
                <fullName>Deadline</fullName>
            </value>
            <value>
                <fullName>EMT CNX</fullName>
            </value>
            <value>
                <fullName>EMT HO</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>HO Back office</fullName>
            </value>
            <value>
                <fullName>IGMS</fullName>
            </value>
            <value>
                <fullName>Inbound ABC</fullName>
            </value>
            <value>
                <fullName>Inbound call</fullName>
            </value>
            <value>
                <fullName>Inbound CNX</fullName>
            </value>
            <value>
                <fullName>Inbound ConnectQ</fullName>
            </value>
            <value>
                <fullName>Insurance Repositary website</fullName>
            </value>
            <value>
                <fullName>Insurance Repository</fullName>
            </value>
            <value>
                <fullName>Letters and Faxes</fullName>
            </value>
            <value>
                <fullName>MH</fullName>
            </value>
            <value>
                <fullName>Outbound Altruist</fullName>
            </value>
            <value>
                <fullName>Outbound call</fullName>
            </value>
            <value>
                <fullName>Outbound CNX</fullName>
            </value>
            <value>
                <fullName>Outbound ConnectQ</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Website Redressal</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>IVR Inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>