force-app/main/default/objects/Case/fields/Sprinklr_Case_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Sprinklr_Case_Reference_Number__c</fullName>
    <label>Sprinklr Case Reference Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>